welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: value getcoulourSol
	if(getcoulourSol()=Color.green){
           ^SlugTracking:24: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
		return Color.green;	
                             ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if(getcoulourSol()=Color.green){
        ^