welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	if(getcoulourSol()=Color.green){
		avance();
		avance();
		avance();
		avance();
		gauche();
		avance();
		avance();
		gauche();
		avance();
		avance();
		droite();
		avance();
		avance();
		droite();
		avance();
		avance();
		avance();
		gauche();
		avance();
		avance();
		return Color.green;	
	}
}        
